# hitalent_test_case

./: .env.example  .gitignore  README.md  pyproject.toml  ruff.toml  test_data.json
src/: config.py  database.py  main.py
src/api/endpoints/v1/: departments.py  routers.py
src/core/: config.py
src/core/constants/: departments.py
src/core/exceptions/: api.py  base.py  database.py  handler.py  mappers.py  services.py
src/core/exceptions/services/: base.py  departments.py  employees.py
src/core/messages/: database.py
src/core/messages/api/: base.py
src/core/messages/db/: departments.py
src/core/messages/services/: departments.py
src/db/: database.py  manager.py
src/dependencies/: db_manager.py
src/migrations/: env.py
src/migrations/versions/: 2f66e618b4f5_fix_departments_model.py  3b43c0e6b7d0_init.py  d1779c70b35d_init.py
src/models/: departments.py  employee.py  employees.py
src/repositories/: base.py  departments.py  employees.py
src/schemas/: departments.py  employees.py
src/service/: employees.py
src/services/: __init__.py  base.py  departments.py  employees.py
test_data/: departments.json  employees.json
