[project]
name = "departments_tree"
version = "0.1"
description = "test case"
authors = [
    {name = "Ilya Shirokov",email = "ilshi2904@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "uvicorn (>=0.48.0,<0.49.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
